pro/src/components/Stepper/Stepper.module.scss
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_a11y.scss" as a11y;
@use "styles/mixins/_size.scss" as size;

$step-label-height: rem.torem(12px);
$number-size: rem.torem(30px);

.stepper {
  @include fonts.caption;

  color: var(--color-grey-semi-dark);
  display: flex;
  justify-content: space-between;
  padding-bottom: $step-label-height;
  flex-direction: column;
  gap: rem.torem(8px);

  li:last-child {
    flex: 0;
  }

  .step-container {
    display: flex;
    flex: 1;

    .step {
      display: flex;
      position: relative;
      color: var(--color-grey-dark);
      align-items: center;
    }

    .number {
      padding-right: rem.torem(8px);

      .inner {
        @include fonts.caption;

        border: solid 1px var(--color-grey-dark);
        border-radius: 50%;
        width: $number-size;
        height: $number-size;
        text-align: center;
        line-height: $number-size;
        margin: auto;
        transition: box-shadow 250ms ease-in-out;
      }
    }

    &.selectionnable {
      .step {
        color: var(--color-black);

        .number {
          .inner {
            border-color: var(--color-secondary-light);
            color: var(--color-secondary-light);
          }
        }
      }

      :hover {
        .label {
          text-decoration: underline var(--color-black);
        }

        .number {
          .inner {
            box-shadow:
              inset $number-size $number-size $number-size
                var(--color-background-secondary),
              0 0 0 rem.torem(4px) var(--color-background-secondary);
          }
        }
      }
    }

    &.active {
      .step {
        color: var(--color-secondary-light);

        .label {
          text-decoration: underline;
        }

        .number {
          .inner {
            border-color: var(--color-secondary-light);
            background-color: var(--color-secondary-light);
            color: var(--color-white);
            box-shadow: none;
          }
        }
      }
    }

    :focus-visible {
      outline: 0;

      .label {
        .inner {
          span {
            outline: rem.torem(1px) solid var(--color-input-text-color);
            outline-offset: rem.torem(4px);
            border-radius: rem.torem(4px);
          }
        }
      }
    }
  }
}

.visually-hidden {
  @include a11y.visually-hidden;
}

@media (min-width: size.$tablet) {
  .stepper {
    flex-direction: row;
    gap: 0;

    .step-container {
      .number {
        padding: 0 rem.torem(16px);
      }

      .separator {
        display: flex;
        align-items: center;
        justify-content: center;
        flex: 1;

        &::after {
          border-radius: rem.torem(2px);
          background-color: var(--color-grey-semi-dark);
          content: "";
          width: 100%;
          height: rem.torem(2px);
        }

        &.active {
          &::after {
            background-color: var(--color-secondary-light);
          }
        }
      }

      .step {
        justify-content: center;
      }

      .label {
        position: absolute;
        width: 7rem;
        text-align: center;
        top: calc($number-size + rem.torem(4px));
        text-decoration: underline transparent;
        transition: text-decoration 250ms;
      }

      &:first-child {
        //  so that the first label does not overlfow the list container on the left
        .label {
          width: unset;
          left: 0;
          text-align: left;
        }
      }

      &:last-child {
        //  so that the last label does not overlfow the list container on the right
        .label {
          width: unset;
          right: 0;
          text-align: right;
        }
      }
    }
  }
}

